azılım Geliştirici Yetiştirme Kampı 14. Gün  1.Commit

--- a/WebAPI1/appsettings.json
+++ b/WebAPI1/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "engin@engin.com", //projenin web adresi
+    "Issuer": "engin@engin.com", //uygulayan
+    "AccessTokenExpiration": 10, // verdiğimiz token'ın geçerlilik süresi.
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
